manifests/frontend/overlays/staging/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-gateway
spec:
  type: ExternalName
  externalName: envoy-default-eg-64656661.envoy-gateway-system.svc.cluster.local
