manifests/frontend/overlays/staging/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "frontend-gateway.default.svc.cluster.local"
    - "frontend-gateway.default"
    - "frontend-gateway"
  rules:
    - backendRefs:
        - name: frontend
          port: 80
