manifests/frontend/overlays/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - kind: Mesh
      name: istio
  hostnames: ["frontend.default.svc.cluster.local"]
  rules:
  - backendRefs:
      - name: frontend
        port: 80
